[package]
name = "link-tracking"
version = "0.1.0"
authors = ["Fintan Halpenny <fintan.halpenny@gmail.com>"]
edition = "2018"
license = "GPL-3.0-or-later"

[dependencies]
bstr = "0.2"
thiserror = "1.0"

[dependencies.git-repository]
version = "0.11.0"

[dependencies.link-canonical]
path = "../link-canonical"
features = [ "derive" ]

[dependencies.link-crypto]
path = "../link-crypto"

[dependencies.link-identities]
path = "../link-identities"

[dependencies.radicle-git-ext]
path = "../git-ext"